Use newer java features